fixed irksome alignment

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -156,7 +156,7 @@ pre {
     margin-right: auto;
     margin-left: auto;
     padding-right: $spacing-unit;
-    padding-left: $spacing-unit;
+  //  padding-left: $spacing-unit;
     padding-top: $spacing-unit;
     padding-bottom: $spacing-unit;
     @extend %clearfix;
@@ -164,8 +164,6 @@ pre {
     @include media-query($on-laptop) {
         max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
         max-width:         calc(#{$content-width} - (#{$spacing-unit}));
-        padding-right: $spacing-unit / 2;
-        padding-left: $spacing-unit / 2;
     }
 
 }
